--- a/style.css
+++ b/style.css
@@ -4,23 +4,24 @@
 }
 
  body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-      }
+        font-family: 'poppins', sans-serif;
+     }
       
  html {
     scroll-behavior: smooth;
  }
 
- p{
+ body{
     color: rgb(85,85,85);
 
  }
-a, .btn {
+a,
+.btn {
     transition: all 300ms ease;
 }
 
-nav, nav-links {
+nav, 
+.nav-links {
     display: flex;
 }
 
@@ -30,8 +31,16 @@ nav {
     height: 17vh;
 }
 
-.nav-linkws {
+.nav-links {
     gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
+}
+
+a:hover{
+    color: grey;
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color: rgb(181, 181, 181);
+
 }
