--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     scroll-behavior: smooth;
  }
 
- body{
+ p{
     color: rgb(85,85,85);
 
  }
@@ -37,10 +37,25 @@ nav {
     font-size: 1.5rem;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+    text-decoration-color: white;
+}
+
 a:hover{
     color: grey;
     text-decoration: underline;
-    text-underline-offset: 1rem;
     text-decoration-color: rgb(181, 181, 181);
 
 }
+
+
+.logo {
+    font-size: 2rem;
+}
+
+.logo:hover{
+    cursor: default;
+}
+
